--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,72 +1,74 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 html {
-  background-color: #232123;
+    background-color: #fff;
+    color: #565b68;
 }
 
 .App-banner {
-  margin-top: 7vh;
-  margin-bottom: 7vh;
-  justify-content: center;
-  display: flex;
-  flex-direction: row;
-  max-height: 10vh;
-  color: white;
+    margin-top: 7vh;
+    margin-bottom: 7vh;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    max-height: 10vh;
+    color: #565b68;
 }
 
 .App-header {
-  min-width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
+    min-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #565b68;
 }
 
 .App-logo {
-  width: 10vh;
-  height: auto;
-  pointer-events: none;
+    width: 10vh;
+    height: auto;
+    pointer-events: none;
 }
 
 .App-title {
-  margin-left: 1.5vh;
-  font-size: 3vh;
-  font-weight: 1;
+    margin-left: 1.5vh;
+    font-size: 3vh;
+    font-weight: 1;
+    color: #565b68;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #000;
 }
 
 .Commands {
-  /* margin-top: 10vh; */
-  margin-bottom: 6vh;
-  display: flex;
-  flex-direction: row;
+    /* margin-top: 10vh; */
+    margin-bottom: 6vh;
+    display: flex;
+    flex-direction: row;
 }
 
 .Toastify__toast-container {
-  width: 400px;
+    width: 400px;
 }
 
 .App-footer a {
-  color: #61dafb;
-  text-decoration: none;
+    color: #000;
+    text-decoration: none;
 }
 
 @media only screen and (orientation: landscape) {
-  .App-footer {
-    margin-top: 6vh;
-    font-size: 1.2vh;
-  }
+    .App-footer {
+        margin-top: 6vh;
+        font-size: 1.2vh;
+    }
 }
 
 @media only screen and (orientation: portrait) {
-  .App-footer {
-    margin-top: 6vw;
-    font-size: 1.2vw;
-  }
+    .App-footer {
+        margin-top: 6vw;
+        font-size: 1.2vw;
+    }
 }
