--- a/frontend/src/LoadButton/index.css
+++ b/frontend/src/LoadButton/index.css
@@ -1,29 +1,35 @@
 .BackupButton {
-  border: none;
-  color: white;
-  border-radius: 12px;
-  opacity: 1;
-  transition: 0.3s;
-  padding-left: 0;
-  padding-right: 0;
+    border: none;
+    color: white;
+    border-radius: 12px;
+    opacity: 1;
+    transition: 0.3s;
+    padding-left: 0;
+    padding-right: 0;
+    background-color: #00aee9;
+    background-image: linear-gradient(74.5deg, #00aee9, #69fabd);
 }
 
 @media only screen and (orientation: landscape) {
-  .BackupButton {
-    width: 15vw;
-    height: 10vw;
-    font-size: 3vw;
-  }
+    .BackupButton {
+        width: 15vw;
+        height: 10vw;
+        font-size: 3vw;
+    }
 }
 
 @media only screen and (orientation: portrait) {
-  .BackupButton {
-    width: 15vh;
-    height: 10vh;
-    font-size: 3vh;
-  }
+    .BackupButton {
+        width: 15vh;
+        height: 10vh;
+        font-size: 3vh;
+    }
 }
 
-.BackupButton:disabled {opacity: 0.5}
+.BackupButton:disabled {
+    opacity: 0.5;
+}
 
-.BackupButton:hover:enabled {opacity: 0.8}
+.BackupButton:hover:enabled {
+    opacity: 0.8;
+}
